java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/packageAnnotationNotInPackageInfo.java
<error descr="Package annotations only allowed in a 'package-info.java' file">@Deprecated</error> package annotations.packageAnnotationNotInPackageInfo;